--- a/PerceptronOnNonLinearIris.ipynb
+++ b/PerceptronOnNonLinearIris.ipynb
@@ -4,11 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework - 2 \n",
-    "## Perceptron on Iris and IrisModified Datasets\n",
-    "### Esra Kantarcı - 20160808023\n",
-    "\n",
-    "**Homework details:**\n",
+
+    "**Details:**\n",
     "\n",
     "*For the first part of the homework, you are expected to implement a python code for the basic perceptron and test it on the given \"iris.csv\" file. Train it for several epochs and calculate the accuracy.*\n",
     "\n",
