--- a/PerceptronOnNonLinearIris.ipynb
+++ b/PerceptronOnNonLinearIris.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
 
-    "*Details of the Task:*\n",
+    "# Details of the Task:\n",
     "\n",
     "*For the first part of the homework, you are expected to implement a python code for the basic perceptron and test it on the given \"iris.csv\" file. Train it for several epochs and calculate the accuracy.*\n",
     "\n",
